# GridMapEditor

./: .gitignore  CMakeLists.txt  README.md  app.rc  log.md  resources.qrc
include/: codehighlighter.h  examplecodedialog.h  gridcreatedialog.h  grideditor.h  mainwindow.h  pathfindingexecutor.h  randomobstacledialog.h
map/: new_map1.json  new_map2.json  new_map3.json  new_map4.json
src/: codeeditor.cpp  codehighlighter.cpp  examplecodedialog.cpp  gridcreatedialog.cpp  grideditor.cpp  main.cpp  mainwindow.cpp  pathfindingexecutor.cpp  randomobstacledialog.cpp
